# cargo-workspace

./: Cargo.toml  readme.md
src/: cargo.rs  main.rs  publish.rs  types.rs  version.rs
src/term/: cargo.rs  git.rs  mod.rs
